fix: cramped Columns in Split Layout at sm

--- a/packages/skcom-css/src/components/split-layout.scss
+++ b/packages/skcom-css/src/components/split-layout.scss
@@ -29,16 +29,11 @@
     .skc-content-layout__content {
       width: 100%;
       margin: 0;
+
+      > :last-child {
+        display: none;
+      }
     }
-  }
-
-  > :first-child {
-    padding-right: 0.75rem;
-  }
-
-  > :last-child {
-    display: none;
-    padding-left: 0.75rem;
   }
 }
 
@@ -50,7 +45,7 @@
 
     > * {
       height: calc(100vh - 12rem);
-      padding-block: 1.5rem;
+      padding: 1.5rem 1rem;
       overflow-y: auto;
     }
   }
@@ -69,12 +64,30 @@
     .skc-split-layout--supporting-panel & {
       grid-template-columns: 5fr 3fr;
     }
+
+    .skc-columns {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+    }
   }
 
   .skc-root-layout,
   .skc-root-layout > * {
     > .skc-split-layout > .skc-split-layout__content {
-      width: calc(100% - (10rem));
+      width: calc(100% - (12rem));
+
+      > * {
+        padding-inline: 0;
+      }
+
+      > :first-child {
+        padding-right: 0.75rem;
+      }
+
+      > :last-child {
+        padding-left: 0.75rem;
+      }
     }
   }
 
@@ -83,6 +96,10 @@
     .skc-root-layout > * {
       > .skc-split-layout > .skc-split-layout__content {
         width: calc(100% - (12rem));
+
+        > * {
+          height: calc(100dvh - 12rem);
+        }
       }
     }
   }
@@ -90,6 +107,11 @@
 
 @include mix.breakpoint("md") {
   .skc-split-layout__content {
+    .skc-columns {
+      display: grid;
+      align-items: start;
+    }
+
     .skc-split-layout--list-detail & {
       grid-template-columns: 1fr 2fr;
     }
